--- a/Public/landing_page/default.css
+++ b/Public/landing_page/default.css
@@ -15,6 +15,15 @@
 @media only screen and (max-width: 600px) {
   /* Add your mobile styles here */
   /* For example: */
+  .header_Clip{
+    text-align: center;
+    max-width: 100%;
+    height:170px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -115px;
+  }
   .subtitle{
     font-size:34px;
   }
@@ -42,6 +51,10 @@
   .alt-features-item{
     margin-bottom:45px;
   }
+  .logo_pennywise{
+  max-height:200px;
+  width: auto;
+  }
 
   /* Additional mobile styles for other elements */
 }
@@ -63,6 +76,19 @@
     font-size: 18px;
     line-height: 1.6;
   }
+  .logo_pennywise{
+  max-height:270px;
+  width: auto;
+  }
+  .header_Clip{
+    text-align: center;
+    max-width: 100%;
+    height:170px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -115px;
+  }
   /* Additional tablet styles for other elements */
 }
 
@@ -70,6 +96,15 @@
 @media only screen and (min-width: 1025px) {
   /* Add your desktop styles here */
   /* For example: */
+  .header_Clip{
+    text-align: center;
+    max-width: 100%;
+    height:180px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -120px;
+  }
   .subtitle{
   font-size:40px;
   }
@@ -83,12 +118,13 @@
     font-size: 20px;
     line-height: 1.7;
   }
+  .logo_pennywise{
+  max-height:270px;
+  width: auto;
+  }
   /* Additional desktop styles for other elements */
 }
 
-/* Common Styles for all devices */
-/* Add your common styles here */
-/* For example: */
 body {
   font-family: 'Jost', sans-serif;
   color: #333;
@@ -111,21 +147,6 @@ p {
   .titan-title-size-4{
     font-size:50px;
   }
-}
-
-.logo_pennywise{
-height:100%;
-max-width: 300px;
-}
-
-.header_Clip{
-  text-align: center;
-  max-width: 100%;
-  height:230px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: -155px;
 }
 
 .clip_center{
@@ -475,15 +496,6 @@ max-width: 300px;
 	 #section-1 .content-slider .slider .banner .banner-inner-wrapper .line {
 		 margin: 1.7em auto;
 	}
-  .header_Clip{
-    text-align: center;
-    max-width: 100%;
-    height:250px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:-170px;
-  }
 }
 
 /*features */
